instead of storing keys as 1 byte of flags and a len, store the overflow flag in the len.  inline is stored len * 2.  overflow is len * 2 + 1.

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 
-range splitting
+drop db needs to wait until threads end?
 
 if we need lots of blocks for a given segment, do we really want
 to use a little blocks of 1-2 pages just because they are on the
