--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,9 @@
 
-drop db needs to wait until threads end?
+need more tests of large overflows, especially with block allocation
+issues, fragmentation, etc.
+
+drop db needs to wait until threads end?  need a way to wait until
+threads end?
 
 if we need lots of blocks for a given segment, do we really want
 to use a little blocks of 1-2 pages just because they are on the
