--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,14 @@
 
+not sure a parent page with only one item in it makes much sense
+
+code for calc/build/write leaf and parent has gotten awfully similar
+
+go back to only one key?  just keep the last key of each item.
+
+multiple prefixes?
+
+get rid of the blocklists?
+
 perf problem with storing locations of each page in parent pages?
     seek doesn't need them.
     next/prev doesn't need them.
@@ -8,7 +18,15 @@ perf problem with storing locations of each page in parent pages?
     store locations elsewhere?
     sidecar page for every parent page, just to store locations?
 
-any way to represent/store keys as deltas?
+any way to represent/store keys as deltas?  vcdiff?
+
+don't pre-read the overflow keys?  or any of the keys?  just keep
+usize offsets like the leaf cursor does?
+
+should verify that build_*_page size always matches the calculated
+size
+
+get rid of pagenum in leaf/parent cursor?  diag only?
 
 need more tests of large overflows, especially with block allocation
 issues, fragmentation, etc.
