--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,50 @@
 
+merge:
+
+let M = stuff that wants to be merged up.  
+    could be multiple young level segments.  
+    could be a ParentPage within something else?
+    whatever.
+
+let D = the dest segment.
+
+let R = the root page of D
+
+let X = the lowest single page in D that entirely contains M.
+    could be a leaf
+    could be a parent, could be the root
+    could be none (M and D do not overlap)
+
+let Y = the ParentPage that contains X, if X exists and is not the root
+
+let Z = the segment produced from MultiCursor(M + X)
+    
+if Y did not exist:
+    if X did not exist, let S = ParentPage for R + Z
+    if X was the root, let S = Z
+
+otherwise:
+    take the direct children of Y 
+    make a Vec<pgitem>
+    replace X with Z
+        if X was a leaf, keep Z as leaves
+        if X was a parent but Z is a single leaf, make a parent
+    let S = write parent node tree
+
+S replaces R
+
+M becomes free pages
+
+X and its parents/ancestors (but not its siblings, which
+became part of S) become free pages
+
+--------
+
+MultiCursor needs to accept any kind of ICursor
+
+SegmentCursor is now nothing but a PageCursor with a hook.  it could
+just be a PageCursor wrapper in a Lend.
+
 do we need a Page class like PageCursor which can represent either
 LeafPage or ParentPage, with a common set of methods?
 
@@ -25,43 +71,6 @@ or First().  and we probably don't want to add thousands of
 little locks.  rather, we need the notion of "I have a lock on
 this page and all the pages it uses."  Kind of like what we
 have now, but works on the page number.
-
-merge:
-
-pick the lowest single page in dest level that entirely
-contains the stuff being merged from younger levels.  
-that page is X.  parent is Y.
-
-what if X is a leaf?  it can be, right?
-
-if X doesn't exist?
-
-if X is the root, and so Y is none?
-
-put all those things in a multicursor, and write a segment
-for that cursor.  that is Z.
-
-Z can be a leaf or a parent, regardless of what X was.
-actually, no.  Y is a parent page that can only accept
-Leaf or Parents, not both.  (why is that?)  so X must be
-a parent page, not a leaf, and if Z ends up being a leaf,
-it needs a parent wrapper around it so it can go into Y.
-alternatively, parent page can learn how to have mixed
-children, some leaf, some parent.
-
-if X did not exist, maybe Z is a new sibling of the root, 
-so we need a new parent/root.
-
-otherwise, rewrite Y, replacing X with Z.  and then rewrite
-Y's parent, and so on, up to the root.
-
-X and all its pages, except ones that got reused in Z,
-become free pages.
-
-what if "new Y" is not one page but two?  no problem,
-just insert both of them into Y's parent where Y used to
-be.  actually, this can't happen.  if Y becomes two pages,
-it will get a new root and be one again.
 
 any given parent set might be less efficient since, for
 example, "new Y" might have pages that are kind of empty.
