this commit is a step forward even though everything is currently much slower.  and re-use of freed blocks is currently disabled, the file grows to an enormous size.  anyway.  the basic thing here is to rework merge completely, allowing it to rewrite part of a segment instead of the whole thing.  this is a form of range splitting.  the merge algorithm finds the portion of the target segment which is overlapped by the stuff it wants to merge into it, and rewrites only that part, bubbling up through the parents to get a new root page.  SegmentNum is gone.  segments_info is gone.  IForwardCursor was introduced.  MergeCursor is MultiCursor, but specifically for the merge case.  MultiPageCursor is like ParentCursor, dealing with a group of pages, but a parent page for them does not exist.  LeafPage and ParentPage gained the ability to generate pgitems so that write_parent_nodes could be called by the merge code.  write_parent_nodes gained the ability to detect and fuss when pgitems are given out of order or overlapping.  next step is to reintroduce the ability to have multiple merge levels.  currently implementation only has 1 target level, with everything else considered young.  and fix free block handling.  and get filter tombstones merge cursor back.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 
+having last_key be an Option<> is so tedious
+
 merge:
 
 let M = stuff that wants to be merged up.  
@@ -14,6 +16,8 @@ let X = the lowest single page in D that entirely contains M.
     could be a leaf
     could be a parent, could be the root
     could be none (M and D do not overlap)
+
+TODO should we allow X to be multiple contiguous pages?
 
 let Y = the ParentPage that contains X, if X exists and is not the root
 
