next step in new merge code.  distinguish between young and levels again.  do merges in terms of leaves, not sibling parents.  added flag to parent pages so they know whether the direct children are themselves parents or leaves.  this commit helps perf, but it's still slow.  merge threads don't keep up with fast growth of the young level.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,9 @@
 
+what is the ratio of leaves to parent pages?  kinda depends on how
+much stuff we can pack into each parent.  but how expensive would
+it be to just assume that merge operations rewrite all the parent
+nodes of the segments involved?
+
 multi level merge needs the ability for the source to be just one
 piece.
 
