sorting the free blocks list can get expensive, so only do it every so often.  also, move the file length check into a separate method, truncate_file_if_possible(), so that the rest of the regular block allocation methods don't need to return Result, since they can get called from a destructor.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
 
+need to figure out a place to call truncate_file_if_possible()
+every so often.
+
 consider having add_free_blocks() just put the new stuff into
 a waiting area, and only do the sorts on the main free block list
 every so often.
