back to keeping a block list in HeaderData for each segment in the current state.  big perf win.  but this time it's a cache.  the block list isn't written into the header.  it is constructed when the header is read and kept maintained by everything that modifies the header.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
 
+lots of bufadvance and varint read calls should probably return Result
+so they can properly error on invalid pages read from the file.
+
 need to figure out a place to call truncate_file_if_possible()
 every so often.
 
